Made 404 page automatically redirect

--- a/404.html
+++ b/404.html
@@ -1,340 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>404 Page Not Found</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/agency.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+  <meta http-equiv='refresh' content='0; URL=http://mkmusicrepair.com/'>
 </head>
-
-<body id="page-top" class="index">
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href = '#'>
-                    <img class="navbar-brand" src="img/logo_transparent.png" alt="MK Music Repair">
-                </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#roadroutes">Routes</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#ctrumpets">C Trumpets</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">Welcome To MK Music Repair!</div>
-                <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 text-center">
-                    <h2 class="section-heading">About Us</h2>
-                    <p class="text-muted">We are a full service band instrument repair shop that specializes in the repair, maintenance and restoration of brass, woodwind and percussion instruments. Started as Mark Kuklok Band Instrument Repair, we have been providing schools, teachers and students with convenient, professional, and affordable repair for 20+ years.</p>
-                    <p class="text-muted">We are located in downtown Owatonna, Minnesota in the lower level of <a href="http://www.tonemusicmn.com">Tone Music</a>.</p>
-                    <p class="text-muted">We also do repair for Jim Kozan and <a href="http://www.wasecamusic.com">Waseca Music</a>. We are proud to be the exclusive repair shop for Waseca Music!</p>
-                    <p class="text-muted">During the school year we offer free weekly pick-up and drop-off of instruments at area schools. Turn-around time is usually 1 week. Please click on the Services tab for more information.</p>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <h2 class="section-heading">What's New</h2>
-                    <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate. You'll be pleasantly surprised with how clean your instruments will come out!</p>
-                    <div class="col-lg-12 text-center">
-                        <div class="row">
-                            <div class="col-lg-6 text-center">
-                                <img src="img/ToneMusicFront.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
-                            </div>
-                            <div class="col-lg-6 text-center">
-                                <img src="img/ToneMusicBack.jpg" class="img-responsive" style="width:100%;height:auto" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted"></h3>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Repairs</h4>
-                    <p class="text-muted">MK Music Repair has 20+ years of expertise in instrument repair, so we have the expertise to fix just about any damage to an instrument. Pricing for repairs is done on a case-by-case basis. You can bring your instrument down, and we will estimate the price of the repairs.</p>
-                    <p class="text-muted">Note: We unfortunately have neither the staff nor expertise to repair string or electronic instruments including guitars.</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-thumbs-up fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Cleaning</h4>
-                    <p class="text-muted">We offer standard cleanings for all brass and woodwind instruments. Pricing varies by brand and by instrument, however, below are estimates by instrument</p>
-                    <p class="text-muted">Brass Cleanings starting at $60</p>
-                    <p class="text-muted">Woodwind Cleanings starting at $50</p>
-                    <p class="text-muted">Woodwind Repadding starting at $200</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-road fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Road Route</h4>
-                    <p class="text-muted">For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Road Route Section -->
-    <section id="roadroutes">
-        <div class="container">
-            <h2 class="section-heading text-center">Road Routes</h2>
-            <div class="row">
-                <div class="col-lg-6">
-                    <h4 class="service-heading">Tuesday</h4>
-                    <ul class="text-muted">
-                        <li>Blooming Prairie High School</li>
-                        <li>Holton Intermediate School - Austin</li>
-                        <li>Ellis Middle School - Austin</li>
-                        <li>Austin High School </li>
-                        <li>Albert Lea High School</li>
-                        <li>Southwest Middle School - Albert Lea</li>
-                        <li>Alden High School</li>
-                        <li>St. Casimir's School - Wells</li>
-                        <li>USC High School - Wells</li>
-                        <li>Butterfield High School</li>
-                        <li>Mountain Lake High School</li>
-                        <li>St. James High School</li>
-                        <li>Madelia High School</li>
-                        <li>New Ulm Cathedral</li>
-                        <li>New Ulm High School</li>
-                        <li>Nicollet High School</li>
-                        <li>Gustavus Adolphus College</li>
-                        <li>Mankato Loyola High School</li>
-                        <li>Prairie Winds Middle School - Mankato</li>
-                    </ul>
-
-                </div>
-                <div class="col-lg-6">
-                    <h4 class="service-heading">Wednesday</h4>
-                    <ul class="text-muted">
-                        <li>Triton High School</li>
-                        <li>Waseca Central Intermediate School</li>
-                        <li>Waseca Junior/Senior High School</li>
-                        <li>WEM Middle School</li>
-                        <li>New Prague Middle School</li>
-                        <li>New Prague High School</li>
-                        <li>New Prague Elementary Schools</li>
-                        <li>Levi P Dodge Middle School - Farmington</li>
-                        <li>Farmington High School</li>
-                        <li>Eastview High School - Apple Valley</li>
-                        <li>Faribault High School</li>
-                        <li>Faribault Middle School</li>
-                        <li>Bethlehem Academy</li>
-                        <li>Medford High School</li>
-                        <li>Owatonna Middle School</li>
-                        <li>Owatonna High School</li>
-                        <li>St. Mary's School - Owatonna</li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Team</h2>
-                    <h3 class="section-subheading text-muted"><h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/mark.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Mark Kuklok</h4>
-                        <p class="text-muted">Owner</p>
-                        <p class="text-muted">Mark has been a full time repair technician since 1992. He is a graduate of the Band Instrument Repair Course at Redwing Technical College (now Southeast Technical College) and has a Bachelor of Science degree in Music Education from North Dakota State University. Mark started his instrument repair career in Mankato, MN and opened MK Music Repair in Owatonna in 2000.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/elise.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Elise Egbert</h4>
-                        <p class="text-muted">Brass Assistant</p>
-                        <p class="text-muted">Elise is a Sophomore at the Owatonna High School. She plays French Horn in the concert band and symphony orchestra and sings in the concert choir. She also plays the trumpet in jazz band, pep band, and pit orchestra.  She is involved with her church, Trinity Lutheran, and is the youth council member for the SE MN ELCA Synod.  In her free time, she enjoys reading and watching Marvel movies.</p>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/jenna.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Jenna Bauman</h4>
-                        <p class="text-muted">Woodwind Assistant</p>
-                        <p class="text-muted">Jenna is a sophomore at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- C Trumpet Section -->
-    <section id="ctrumpets">
-        <div class="container">
-            <h2 class="section-heading text-center">C Trumpet Conversion</h2>
-            <p class="text-muted">One of the services offered at MK Music Repair is converting a Bb trumpet into a C trumpet. This is not a very large part of the business but it is something that we have been doing off and on for the last 17 years.</p>
-            <p class="text-muted">We start with an Olds Ambassador Bb trumpet, strip the lacquer, remove the bell, leadpipe, and most of the outer slide tubes. Then we cut tubes to the proper length and rebuild the instrument from the valve casing on up. The leadpipe is replaced with a Bach Strad 25 Bb leadpipe and the tuning slide is reversed. The 1st slide has a saddle installed and the 3rd slide has a fixed ring attached. Both the 1st & 3rd slides are properly fitted for smooth and quick action. The Olds leadpipe/bell braces are discarded and replaced with typical leadpipe/bell to casing braces and "S" braces between the bell and leadpipe. Your choice of conventional or Amado waterkeys are installed. Usually we leave a raw brass with a polished or brushed finish but other finishes are available at an additional cost.</p>
-            <p class="text-muted">This process is not simply cutting a few slides. We completely disassemble the instrument and rebuild it from the ground up. The completed instrument bears very little resemblance to the original trumpet. We have done about 8 of these conversions and all the owners have been very happy with the way the trumpet plays and the intonation.</p>
-            <p class="text-muted">It usually takes anywhere from 2 to 4 months to complete a C trumpet conversion depending on the season.</p>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    <img src="img/CTrumpet1.jpg" class="img-responsive" style="padding:5%" alt="">
-                </div>
-                <div class="col-lg-4 text-center">
-                    <img src="img/CTrumpet2.jpg" class="img-responsive" style="padding:5%" alt="">
-                </div>
-                <div class="col-lg-4 text-center">
-                    <img src="img/CTrumpet3.jpg" class="img-responsive" style="padding:5%" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
-            <h2 class="section-heading text-center">Contact Us</h2>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    <h3 class="text-muted">Address</h3>
-                    <p class="text-muted">MK Music Repair</br>114 North Cedar Avenue</br>Owatonna, Minnesota 55060</br>(in the lower level of Tone Music)</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <h3 class="text-muted">Phone & Email</h3>
-                    <p class="section-subheading text-muted">(507) 456-0706</br>mark@mkmusicrepair.com</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <h3 class="text-muted">Hours</h3>
-                    <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Tuesday - Assistants are in 1PM-5PM</p>
-                    <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
-                    <p class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Weekends - By Appointment</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; MK Music Repair 2020</span>
-                </div>
-                <div class="col-md-8">
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/classie.js"></script>
-    <script src="js/cbpAnimatedHeader.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script src="js/agency.js"></script>
-
-</body>
-
-</html>
