Updated What's New and road route info

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
-                    <p class="text-muted">We recently purchased a brand new Ultrasonic Cleaner for the shop. It is extremely thorough, and considerably faster, too! It's also better for the environment as it doesn't require any harmful chemicals to operate. You'll be pleasantly surprised with how clean your instruments will come out!</p>
+                    <p class="text-muted"><b>Because of the COVID-19 outbreak we will no longer be travelling to area schools on our regular weekly routes.</b> Our shop will remain open and we will continue to serve the schools but on an as-needed basis. During this time, we will be running a special of 10% off all labor and parts. This special will run until April 30th. This would be a good time to get your instruments cleaned or serviced. If you attend one of the schools we normally visit and would like to arrange for us to pick it up, please contact us either by phone at 507-456-0706 or email at mark@mkmusicrepair.com.</p>
                     <div class="col-lg-12 text-center">
                         <div class="row">
                             <div class="col-lg-6 text-center">
@@ -157,7 +157,7 @@
                         <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Road Route</h4>
-                    <p class="text-muted">For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
+                    <p class="text-muted"><b>Currently, due to the COVID-19 outbreak, we are suspending the road route until April 30th.</b> For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
                 </div>
             </div>
         </div>
@@ -295,8 +295,8 @@
                 <div class="col-lg-4 text-center">
                     <h3 class="text-muted">Hours</h3>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Tuesday - Assistants are in 1PM-5PM</p>
-                    <p class="section-subheading text-muted">Wednesday - 1PM-5PM</p>
+                    <p class="section-subheading text-muted">Tuesday - 8AM-5PM (out 12-1 for lunch)</p>
+                    <p class="section-subheading text-muted">Wednesday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Weekends - By Appointment</p>
