--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
-                    <p class="text-muted"><b>Because of the COVID-19 outbreak we will no longer be travelling to area schools on our regular weekly routes.</b> Our shop will remain open and we will continue to serve the schools but on an as-needed basis. During this time, we will be running a special of 10% off all labor and parts. This special will run until April 30th. This would be a good time to get your instruments cleaned or serviced. If you attend one of the schools we normally visit and would like to arrange for us to pick it up, please contact us either by phone at 507-456-0706 or email at mark@mkmusicrepair.com.</p>
+                    <p class="text-muted"><b>Holiday Repair Special:</b>
+We will be running the annual Holiday Repair Special like we have in the
+past, with one change. The special will start December 1st and go through
+the entire month. The usual 10% discount will apply. If instruments are sent in
+<i>before</i> Holiday break, they will be completed within one week. If instruments are sent
+in <i>during</i> the break, they will be picked up on December 22nd or 23rd and returned
+after Jan 1st. Check out our Road Route page to see when
+we pick up instruments at your school. Please call (507) 456-0706 for more information.
+ or email at mark@mkmusicrepair.com.</p>
                     <div class="col-lg-12 text-center">
                         <div class="row">
                             <div class="col-lg-6 text-center">
@@ -157,7 +165,7 @@
                         <i class="fa fa-road fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Road Route</h4>
-                    <p class="text-muted"><b>Currently, due to the COVID-19 outbreak, we are suspending the road route until April 30th.</b> For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
+                    <p class="text-muted">For the convenience of our customers, Mark travels two days a week during the school year to pick up and drop off instruments at numerous Southern Minnesota and Suburban schools. The road routes are listed below. If you have an instrument that you would like picked up at one of the schools please contact us by phone or email. Turn-around is usually one week for road route instruments. You will be contacted with an estimate before any work is started.</p>
                 </div>
             </div>
         </div>
@@ -178,8 +186,8 @@
                         <li>Albert Lea High School</li>
                         <li>Southwest Middle School - Albert Lea</li>
                         <li>Alden High School</li>
-                        <li>St. Casimir's School - Wells</li>
                         <li>USC High School - Wells</li>
+                        <li>Maple River High School</li>
                         <li>Butterfield High School</li>
                         <li>Mountain Lake High School</li>
                         <li>St. James High School</li>
@@ -242,7 +250,7 @@
                         <img src="img/team/elise.jpg" class="img-responsive img-circle" alt="">
                         <h4>Elise Egbert</h4>
                         <p class="text-muted">Brass Assistant</p>
-                        <p class="text-muted">Elise is a Sophomore at the Owatonna High School. She plays French Horn in the concert band and symphony orchestra and sings in the concert choir. She also plays the trumpet in jazz band, pep band, and pit orchestra.  She is involved with her church, Trinity Lutheran, and is the youth council member for the SE MN ELCA Synod.  In her free time, she enjoys reading and watching Marvel movies.</p>
+                        <p class="text-muted">Elise is a Senior at the Owatonna High School. She plays French Horn in the concert band and symphony orchestra and sings in the concert choir. She also plays the trumpet in jazz band, pep band, and pit orchestra.  She is involved with her church, Trinity Lutheran, and is the youth council member for the SE MN ELCA Synod.  In her free time, she enjoys reading and watching Marvel movies.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -250,7 +258,7 @@
                         <img src="img/team/jenna.jpg" class="img-responsive img-circle" alt="">
                         <h4>Jenna Bauman</h4>
                         <p class="text-muted">Woodwind Assistant</p>
-                        <p class="text-muted">Jenna is a sophomore at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
+                        <p class="text-muted">Jenna is a Junior at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
                     </div>
                 </div>
             </div>
