Updated What's New Section

--- a/index.html
+++ b/index.html
@@ -105,15 +105,12 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
-                    <p class="text-muted"><b>Holiday Repair Special:</b>
-We will be running the annual Holiday Repair Special like we have in the
-past, with one change. The special will start December 1st and go through
-the entire month. The usual 10% discount will apply. If instruments are sent in
-<i>before</i> Holiday break, they will be completed within one week. If instruments are sent
-in <i>during</i> the break, they will be picked up on December 22nd or 23rd and returned
-after Jan 1st. Check out our Road Route page to see when
-we pick up instruments at your school. Please call (507) 456-0706 for more information.
- or email at mark@mkmusicrepair.com.</p>
+                    <p class="text-muted"><b>C Trumpet in Stock:</b>
+We have just completed a custom C Trumpet made from
+an Olds Ambassador Bb trumpet. It is a step up from our standard C Trumpet as described
+in the C Trumpet section. The valves were rebuilt, and it has a lacquer finish. Normally our trumpets are raw brass.
+Please call (507) 456-0706 or email at mark@mkmusicrepair.com for price
+and more information.</p>
                     <div class="col-lg-12 text-center">
                         <div class="row">
                             <div class="col-lg-6 text-center">
