Added new member

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@ and more information.</p>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/elise.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Elise Egbert</h4>
+                        <img src="img/team/samantha.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Samantha Liebl</h4>
                         <p class="text-muted">Brass Assistant</p>
-                        <p class="text-muted">Elise is a Senior at the Owatonna High School. She plays French Horn in the concert band and symphony orchestra and sings in the concert choir. She also plays the trumpet in jazz band, pep band, and pit orchestra.  She is involved with her church, Trinity Lutheran, and is the youth council member for the SE MN ELCA Synod.  In her free time, she enjoys reading and watching Marvel movies.</p>
+                        <p class="text-muted">Samantha is a Junior at the Owatonna High School. She is involved in Stage Crew in the theater department. She is the president of the High School Art Club, she sings in the choir at at St. Joes Church. In her free time, she can be found watching Scooby Doo and Hogan's Heroes!</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -254,7 +254,7 @@ and more information.</p>
                         <img src="img/team/jenna.jpg" class="img-responsive img-circle" alt="">
                         <h4>Jenna Bauman</h4>
                         <p class="text-muted">Woodwind Assistant</p>
-                        <p class="text-muted">Jenna is a Junior at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
+                        <p class="text-muted">Jenna is a Senior at the Owatonna High School. She plays clarinet in varsity band, pep-band and marching band. In her free time, she loves to read, hike, bike, usher at church, take care of her six chickens and play with her dog.</p>
                     </div>
                 </div>
             </div>
