--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
                     <p class="text-muted">During the school year we offer free weekly pick-up and drop-off of
                         instruments at area schools. Turn-around time is usually 1 week. Please click on the Services
                         tab for more information.</p>
+                    <div class="col-lg-12 text-center">
+                        <div class="row">
+                            <div class="col-lg-6 text-center">
+                                <img src="img/ToneMusicFront.jpg" class="img-responsive" style="width:100%;height:auto"
+                                    alt="">
+                            </div>
+                            <div class="col-lg-6 text-center">
+                                <img src="img/ToneMusicBack.jpg" class="img-responsive" style="width:100%;height:auto"
+                                    alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-6 text-center">
                     <h2 class="section-heading">What's New</h2>
@@ -124,12 +136,8 @@
                         the shop. This will allow us to offer a much better customer experience!</p>
                     <div class="col-lg-12 text-center">
                         <div class="row">
-                            <div class="col-lg-6 text-center">
-                                <img src="img/ToneMusicFront.jpg" class="img-responsive" style="width:100%;height:auto"
-                                    alt="">
-                            </div>
-                            <div class="col-lg-6 text-center">
-                                <img src="img/ToneMusicBack.jpg" class="img-responsive" style="width:100%;height:auto"
+                            <div class="col-lg-12 text-center">
+                                <img src="img/ExpandedShop.jpg" class="img-responsive" style="width:100%;height:auto"
                                     alt="">
                             </div>
                         </div>
