--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                 <div class="col-lg-4 text-center">
                     <h3 class="text-muted">Hours</h3>
                     <p class="section-subheading text-muted">Monday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Tuesday - 8AM-5PM (out 12-1 for lunch)</p>
-                    <p class="section-subheading text-muted">Wednesday - 8AM-5PM (out 12-1 for lunch)</p>
+                    <p class="section-subheading text-muted">Tuesday - 3:15PM-5PM (out in morning for road route)</p>
+                    <p class="section-subheading text-muted">Wednesday - 3PM-5PM (out in morning for road route)</p>
                     <p class="section-subheading text-muted">Thursday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Friday - 8AM-5PM (out 12-1 for lunch)</p>
                     <p class="section-subheading text-muted">Weekends - By Appointment</p>
